# ForzaEmbed

./: .gitignore  New_York_City.md  README.md  clusert_tsne.py  config.yml  evaluation_metrics.py  extraire_md.py  heatmap_text.py  main.py  metrics_documentation.md  pyproject.toml  regenerate_graphs.py  supported_models.csv
configs/: config.yml  config_horaires.yml
docs/: doc_en.md  doc_fr.md  embedding_similarity_evaluation.md  embedding_similarity_evaluation_explanation.md  metrics_documentation.md
markdowns/: S7858_bibliothèque_Bibliothèque_Marcel_et_Renée_Roche.md
src/: config.py  core.py  data_loader.py  database.py  embedding_client.py  essaift.py  evaluation_metrics.py  fastembed_client.py  huggingface_client.py  lancedb_client.py  local_embedding_client.py  processing.py  reporting.py  sentencetransformers_client.py  silhouette_decomposition.py  utils.py  web_generator.py  worker.js
src/clients/: api_client.py  embedding_client.py  sentencetransformers_client.py
src/core/: config.py  core.py  processing.py
src/metrics/: evaluation_metrics.py  silhouette_decomposition.py
src/reporting/: aggregator.py  reporting.py  web_generator.py
src/utils/: data_loader.py  database.py  utils.py
