[project]
name = "forzaembed"
version = "0.2.0"
description = "Empower Your AI with the Strongest Embeds."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "matplotlib>=3.10.3",
    "pandas>=2.3.1",
    "requests>=2.32.4",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.0.0",
    "plotly>=5.22.0",
    "kaleido>=0.2.1",
    "nltk>=3.9.1",
    "langchain>=0.2.11",
    "fastembed>=0.7.1",
]
