[project]
name = "forzaembed"
version = "0.2.0"
description = "Empower Your AI with the Strongest Embeds."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy",
    "tqdm",
    "scikit-learn",
    "matplotlib",
    "seaborn",
    "fastembed",
    "sentence-transformers",
    "msgpack",
    "requests",
    "uvicorn",
    "fastapi",
    "beautifulsoup4",
    "markdownify",
    "polars>=1.32.0",
    "nltk>=3.9.1",
    "spacy>=3.8.7",
    "dotenv>=0.9.9",
    "semchunk>=3.2.2",
    "langchain>=0.3.27",
    "pip>=25.2",
    "plotly>=6.2.0",
    "kaleido>=1.0.0",
    "pyarrow>=21.0.0",
    "joblib>=1.4.2",
    "jsmin",
    "cssmin",
]
